Fix word wrapping of code blocks (Thanks @KevinTCoughlin for solving this!)

--- a/_sass/_docsite.scss
+++ b/_sass/_docsite.scss
@@ -114,6 +114,12 @@ body {
   margin: 0;
 }
 
+code {
+  // Bootstrap sets "word-break: break-word", which breaks up identifiers too aggressively
+  word-break: normal;
+  overflow-wrap: break-word;
+}
+
 table {
   font-size: 93%;
   margin-top: 2rem;
